# smarta

./: .gitignore  .gitmodules  CHANGES  DESIGN  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  aclocal.m4  config.status  configure  configure.ac  configure.in  register  smarta.conf  smarta.master.conf  smarta.slave.conf  start  tags
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
bak/: Makefile.am  auth.c  conn.c  event.c  handler.c  handler.h  smarta.c  sock.c  sock.h  tls_gnutls.c  tls_openssl.c
doc/: DESIGN
etc/: checks.conf  commands.conf  smarta.conf
examples/: active  active.c  basic  basic.c  bot  bot.c  roster  roster.c
examples/.deps/: examples_active-active.Po  examples_basic-basic.Po  examples_bot-bot.Po  examples_roster-roster.Po
expat/lib/.deps/: libexpat_a-xmlparse.Po  libexpat_a-xmlrole.Po  libexpat_a-xmltok.Po
plugins/: README.md  check_cpu  check_cpulevel  check_crash  check_disk  check_load  check_memlevel  check_memory  check_mysql_bytes  check_mysql_cmd  check_mysql_conns  check_mysql_handler  check_mysql_innodb  check_mysql_key  check_mysql_locks  check_mysql_opentab  check_mysql_qcache  check_mysql_slow  check_mysql_vars  check_ping  check_swap  check_tasks  check_tcp  logfile.sh  plugin.lua
src/: .xmpp.c.swp  adlist.h  ae.c  anet.c  anet.h  auth.c  cjob.c  cjob.h  cmd.c  cmd.h  common.h  config.c  conn.c  ctl.c  ctl.h  ctx.c  dict.c  event.c  event.h  handler.c  hash.c  hash.h  jid.c  jid.h  logger.c  md5.h  parser.c  parser.h  plugin.h  proxy.c  proxy.h  sasl.c  sasl.h  sched.c  sched.h  sds.c  sds.h  sensor.c  sensor.h  slave.c  (+19 more)
src/.deps/: libstrophe_a-auth.Po  libstrophe_a-conn.Po  libstrophe_a-ctx.Po  libstrophe_a-event.Po  libstrophe_a-handler.Po  libstrophe_a-hash.Po  libstrophe_a-jid.Po  libstrophe_a-md5.Po  libstrophe_a-parser_expat.Po  libstrophe_a-sasl.Po  libstrophe_a-sha1.Po  libstrophe_a-snprintf.Po  libstrophe_a-sock.Po  libstrophe_a-stanza.Po  libstrophe_a-thread.Po  libstrophe_a-tls_openssl.Po  libstrophe_a-util.Po
src/core/: anet.c  config.h  md5.c  sha1.c  sha1.h  tls.c  tls.h
src/xmpp/: jid.c  jid.h  parser.c  parser.h  sasl.c  stanza.c  stanza.h  xmpp.c  xmpp.h
tests/: check_parser.c  test_base64.c  test_ctx.c  test_hash.c  test_jid.c  test_sasl.c
